# api-actix-web

./: .env.template  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  ENDPOINTS.md  README.md  azure-pipelines.yml  endpoints.rest  responses.rest
.devcontainer/: devcontainer.json
.idx/: dev.nix
k8s/: definition.yaml
src/: main.rs
src/app/: config.rs  db.rs  db_postgres.rs
src/app/models/: entities.rs  entity_types.rs  mod.rs  prelude.rs  stages.rs
src/app/routes/: hello.rs  mod.rs  models.rs  summary.rs
